--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="./css/header.css">
+        <link rel="stylesheet" href="./css/index.css">
     </head>
 
     <header>
-
         <div id="logo">
             <img src="./assets/logo/ohmyfood.png" alt="Logo Ohmyfood">
         </div>
@@ -26,8 +25,17 @@
             <i class="fa-solid fa-location-dot"></i>
             <input type="text" placeholder="Paris, Belleville">
         </div>
-
     </header>
+
+    <main>
+
+        <section id="reservation">
+            <h1>Réservez le menu qui vous convient</h1>
+            <h2>Découvrez des restaurants d’exception, sélectionnés par nos soins.</h2>
+            <button>Explorer nos restaurants</button>
+        </section>
+
+    </main>
 
     </body>
 </html>
