--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <link rel="stylesheet" href="./css/index.css">
     </head>
 
-    <header>
-        <div id="logo">
-            <img src="./assets/logo/ohmyfood.png" alt="Logo Ohmyfood">
-        </div>
+    <body>
 
-        <div class="location">
-            <i class="fa-solid fa-location-dot"></i>
-            <input type="text" placeholder="Paris, Belleville">
-        </div>
-    </header>
+        <header>
+            <div id="logo">
+                <img src="./assets/logo/ohmyfood.png" alt="Logo Ohmyfood">
+            </div>
 
-    <main>
+            <div class="location">
+                <i class="fa-solid fa-location-dot"></i>
+                <input type="text" placeholder="Paris, Belleville">
+            </div>
+        </header>
 
         <section id="reservation">
             <h1>Réservez le menu qui vous convient</h1>
@@ -35,7 +35,36 @@
             <button>Explorer nos restaurants</button>
         </section>
 
-    </main>
-
+        <main class="main-container">
+            <section id="fonctionnement">
+                <div class="container">
+                    <h2>Fonctionnement</h2>
+                    <section id="detail">
+                        <div>
+                            <span>1</span>
+                            <article>
+                                <i class="fa-solid fa-mobile-screen-button"></i>
+                                <p>Choisissez un restaurant</p>
+                            </article>
+                        </div>
+                        <div>
+                            <span>2</span>
+                            <article>
+                                <i class="fa-solid fa-list-ul"></i>
+                                <p>Composez votre menu</p>
+                            </article>
+                        </div>
+                        <div>
+                            <span>3</span>
+                            <article>
+                                <i class="fa-solid fa-store"></i>
+                                <p>Dégustez au restaurant</p>
+                            </article>
+                        </div>
+                    </section>
+                </div>
+            </section>
+        </main>
+        
     </body>
 </html>
