--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="location">
                 <i class="fa-solid fa-location-dot"></i>
-                <input type="text" placeholder="Paris, Belleville">
+                <input type="text" value="Paris, Belleville">
             </div>
         </header>
 
@@ -146,6 +146,16 @@
             </section>
 
         </main>
+
+        <footer>
+            <h3>ohmyfood</h3>
+            <ul>
+                <li><i class="fa-solid fa-utensils"></i><a href="#"> Proposer un restaurant</a></li>
+                <li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
+            </ul>
+        </footer>
 
     </body>
 </html>
