--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="location">
                 <i class="fa-solid fa-location-dot"></i>
-                <input type="text" value="Paris, Belleville">
+                <input type="text" placeholder="Paris, Belleville">
             </div>
         </header>
 
