--- a/restaurants/aLaFrancaise.html
+++ b/restaurants/aLaFrancaise.html
@@ -25,7 +25,7 @@
     <main>
 
         <section class="banner">
-            <img src="../assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant, A la française">
+            <img src="../assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
         </section>
 
         <section id="background">
