add heart animation + icon active + buttons animation

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div>
                             <span>3</span>
                             <article>
-                                <i class="fa-solid fa-store"></i>
+                                <i class="fa-solid fa-store fa--active"></i>
                                 <p>Dégustez au restaurant</p>
                             </article>
                         </div>
@@ -79,8 +79,8 @@
                                         <p class="card-subtitle">Ménilmontant</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart"></i>
-                                        <!-- <i class="fa-thin fa-heart"></i> -->
+                                        <i class="fa-regular fa-heart like menu-liked--outline"></i>
+                                        <i class="fa-solid fa-heart like menu-liked--solid"></i>
                                     </div>
                                 </div>
                             </article>
@@ -99,8 +99,8 @@
                                         <p>Charonne</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart"></i>
-                                        <!-- <i class="fa-thin fa-heart"></i> -->
+                                        <i class="fa-regular fa-heart like menu-liked--outline"></i>
+                                        <i class="fa-solid fa-heart like menu-liked--solid"></i>
                                     </div>
                                 </div>
                             </article>
@@ -118,8 +118,8 @@
                                         <p>Cité Rouge</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart"></i>
-                                        <!-- <i class="fa-thin fa-heart"></i> -->
+                                        <i class="fa-regular fa-heart like menu-liked--outline"></i>
+                                        <i class="fa-solid fa-heart like menu-liked--solid"></i>
                                     </div>
                                 </div>
                             </article>
@@ -136,8 +136,8 @@
                                         <p>Folie-Méricourt</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart"></i>
-                                        <!-- <i class="fa-thin fa-heart"></i> -->
+                                        <i class="fa-regular fa-heart like menu-liked--outline"></i>
+                                        <i class="fa-solid fa-heart like menu-liked--solid"></i>
                                     </div>
                                 </div>
                             </article>
