--- a/restaurants/aLaFrancaise.html
+++ b/restaurants/aLaFrancaise.html
@@ -35,8 +35,8 @@
                 <section class="title-container">
                     <h1>À la française</h1>
                     <div class="heart">
-                        <i class="fa-regular fa-heart"></i>
-                        <!-- <i class="fa-thin fa-heart"></i> -->
+                        <i class="fa-regular fa-heart like menu-liked--outline"></i>
+                        <i class="fa-solid fa-heart like menu-liked--solid"></i>
                     </div>
                 </section>
                 
