--- a/restaurants/aLaFrancaise.html
+++ b/restaurants/aLaFrancaise.html
@@ -34,10 +34,14 @@
 
                 <section class="title-container">
                     <h1>À la française</h1>
-                    <div class="heart">
-                        <i class="fa-regular fa-heart like menu-liked--outline"></i>
-                        <i class="fa-solid fa-heart like menu-liked--solid"></i>
-                    </div>
+                    <form class="like-form">
+                        <input type="checkbox" id="like_a-la-francaise" name="like_a-la-francaise" class="like_button" value="favorite">
+                        <label for="like_a-la-francaise" class="fav-label">
+                            <i class="fa-solid fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
+                            <span class="sr-only">Ajouter au favoris</span>
+                        </label>
+                    </form>
                 </section>
                 
                 <section class="cards-restau">
