--- a/restaurants/laPaletteDuGout.html
+++ b/restaurants/laPaletteDuGout.html
@@ -34,10 +34,14 @@
 
                 <section class="title-container">
                     <h1>La palette du goût</h1>
-                    <div class="heart">
-                        <i class="fa-regular fa-heart like menu-liked--outline"></i>
-                        <i class="fa-solid fa-heart like menu-liked--solid"></i>
-                    </div>
+                    <form class="like-form">
+                        <input type="checkbox" id="like_palette-du-gout" name="like_palette-du-gout" class="like_button" value="favorite">
+                        <label for="like_palette-du-gout" class="fav-label">
+                          <i class="fa-solid fa-heart"></i>
+                          <i class="fa-regular fa-heart"></i>
+                          <span class="sr-only">Ajouter au favoris</span>
+                        </label>
+                    </form>
                 </section>
                 
                 <section class="cards-restau">
