add animations for restaurant card

--- a/restaurants/laNoteEnchantee.html
+++ b/restaurants/laNoteEnchantee.html
@@ -45,8 +45,8 @@
                 </section>
                 
                 <section class="cards-restau">
-                    <h2>Entrées</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 1;">Entrées</h2>
+                    <article class="card-restau" style="--anim-order: 2;">
                         <div class="card-content">
                             <h3>Ravioles de foie gras</h3>
                             <h4>Accompagnées de leur crème à la truffe</h4>
@@ -59,7 +59,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 3;">
                         <div class="card-content">
                             <h3>Caviar osciètre</h3>
                             <h4>Sur blini à la farine de blé noir</h4> 
@@ -72,7 +72,7 @@
                         </div>
                     </article>
                 
-                    <article class="card-restau">    
+                    <article class="card-restau" style="--anim-order: 4;">    
                         <div class="card-content">
                             <h3>Homard et espuma de potiron</h3>
                             <h4>Marinés aux zestes d'orange</h4>
@@ -85,7 +85,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">    
+                    <article class="card-restau" style="--anim-order: 5;">    
                         <div class="card-content">
                             <h3>Foie gras de canard cuit entier</h3>
                             <h4>Confiture de figue et pain toasté</h4>
@@ -100,8 +100,8 @@
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Plats</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 6;">Plats</h2>
+                    <article class="card-restau" style="--anim-order: 7;">
                         <div class="card-content">
                             <h3>Noix de coquilles Saint-Jacques</h3>
                             <h4>Sur lit de purée de céleri-rave</h4>
@@ -115,7 +115,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 8;">
                         <div class="card-content">
                             <h3>Langoustine poêlée</h3>
                             <h4>Purée de patate douce</h4>
@@ -128,7 +128,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 9;">
                         <div class="card-content">
                             <h3>Mijoté de queue de bœuf </h3>
                             <h4>Et riz sauvage aux zestes de citron</h4>
@@ -144,8 +144,8 @@
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Desserts</h2>  
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 10;">Desserts</h2>  
+                    <article class="card-restau" style="--anim-order: 11;">
                         <div class="card-content">
                             <h3>Macaron noisette et chocolat</h3>
                             <h4>Glace au caramel brun et sel de Guérande</h4> 
@@ -160,7 +160,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 12;">
                         <div class="card-content">
                             <h3>Baba au rhum revisité</h3>
                             <h4>Avec son coulis de citron</h4>
@@ -175,7 +175,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 13;">
                         <div class="card-content">
                             <h3>Tarte au citron meringuée</h3>
                             <h4>Déstructurée</h4>
