--- a/restaurants/laPaletteDuGout.html
+++ b/restaurants/laPaletteDuGout.html
@@ -45,8 +45,8 @@
                 </section>
                 
                 <section class="cards-restau">
-                    <h2>Entrées</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 1;">Entrées</h2>
+                    <article class="card-restau" style="--anim-order: 2;">
                         <div class="card-content">
                             <h3>Fricassée d'escargots</h3>
                             <h4>Au piment d'Espelette</h4>
@@ -59,7 +59,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 3;">
                         <div class="card-content">
                             <h3>Foie gras de canard mi-cuit</h3>
                             <h4>Et ses copeaux de truffe noire</h4> 
@@ -72,7 +72,7 @@
                         </div>
                     </article>
                 
-                    <article class="card-restau">    
+                    <article class="card-restau" style="--anim-order: 4;">    
                         <div class="card-content">
                             <h3>Œuf au plat</h3>
                             <h4>Assaisonné à la truffe sur lit de caviar</h4>
@@ -87,8 +87,8 @@
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Plats</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 5;">Plats</h2>
+                    <article class="card-restau" style="--anim-order: 6;">
                         <div class="card-content">
                             <h3>Filet de bœuf aux herbes</h3>
                             <h4>Accompagné de sa ribambelle de légumes</h4>
@@ -102,7 +102,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 7;">
                         <div class="card-content">
                             <h3>Parmentier de queue de bœuf</h3>
                             <h4>À la truffe noire sur sa purée de panais</h4>
@@ -115,7 +115,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 8;">
                         <div class="card-content">
                             <h3>Filet de turbot</h3>
                             <h4>Aux agrumes</h4>
@@ -131,8 +131,8 @@
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Desserts</h2>  
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 9;">Desserts</h2>  
+                    <article class="card-restau" style="--anim-order: 10;">
                         <div class="card-content">
                             <h3>Paris-Brest</h3>
                             <h4>Revisité</h4> 
@@ -147,7 +147,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 11;">
                         <div class="card-content">
                             <h3>Macaron au chocolat d'exception</h3>
                             <h4>Et glace à la vanille de Madagascar</h4>
@@ -162,7 +162,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 12;">
                         <div class="card-content">
                             <h3>Mousse au chocolat</h3>
                             <h4>Au piment d'Espelette et à la truffe noire</h4>
