--- a/restaurants/aLaFrancaise.html
+++ b/restaurants/aLaFrancaise.html
@@ -45,8 +45,8 @@
                 </section>
                 
                 <section class="cards-restau">
-                    <h2>Entrées</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 1;">Entrées</h2>
+                    <article class="card-restau" style="--anim-order: 2;">
                         <div class="card-content">
                             <h3>Tartare de poulpe acidulé</h3>
                             <h4>Aux zestes d'orange</h4>
@@ -55,11 +55,11 @@
                             <span class="euro">25€</span>
                         </div>
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 3;">
                         <div class="card-content">
                             <h3>Velouté de légumes d'antan</h3>
                             <h4>Carotte, panais, topinambour</h4> 
@@ -68,11 +68,11 @@
                             <span class="euro">35€</span>
                         </div>
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
                 
-                    <article class="card-restau">    
+                    <article class="card-restau" style="--anim-order: 4;">    
                         <div class="card-content">
                             <h3>Soupe à l'oignon</h3>
                             <h4>Revisitée</h4>
@@ -81,14 +81,14 @@
                             <span class="euro">20€</span>
                         </div>
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Plats</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 5;">Plats</h2>
+                    <article class="card-restau" style="--anim-order: 6;">
                         <div class="card-content">
                             <h3>Coquilles Saint-Jacques</h3>
                             <h4>Accompagnées d'une purée de panais</h4>
@@ -98,11 +98,11 @@
                             <span class="euro">40€</span>
                         </div>
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 7;">
                         <div class="card-content">
                             <h3>Magret de canard</h3>
                             <h4>Et parmentier de pommes de terre</h4>
@@ -111,11 +111,11 @@
                             <span class="euro">35€</span>
                         </div>
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 8;">
                         <div class="card-content">
                             <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                             <h4>Sur son lit de gnocchis aux légumes</h4>
@@ -125,14 +125,14 @@
                             <span class="euro">44€</span>
                         </div>
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Desserts</h2>  
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 9;">Desserts</h2>  
+                    <article class="card-restau" style="--anim-order: 10;">
                         <div class="card-content">
                             <h3>Pétales de violettes glacés</h3>
                             <h4>Et purée de noisettes</h4> 
@@ -143,11 +143,11 @@
                         </div>
 
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 11;">
                         <div class="card-content">
                             <h3>Fondant au chocolat</h3>
                             <h4>Revisité</h4>
@@ -158,11 +158,11 @@
                         </div>
 
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 12;">
                         <div class="card-content">
                             <h3>Millefeuille croustillant</h3>
                             <h4>Myrtilles et pâte d’amande</h4>
@@ -173,7 +173,7 @@
                         </div>
 
                         <div class="card-anim">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-check"></i>
                         </div>
                     </article>
                 </section>
