--- a/restaurants/leDeliceDesSens.html
+++ b/restaurants/leDeliceDesSens.html
@@ -45,8 +45,8 @@
                 </section>
                 
                 <section class="cards-restau">
-                    <h2>Entrées</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 1;">Entrées</h2>
+                    <article class="card-restau" style="--anim-order: 2;">
                         <div class="card-content">
                             <h3>Tartare de thon</h3>
                             <h4>Assaisonné au yuzu</h4>
@@ -59,7 +59,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 3;">
                         <div class="card-content">
                             <h3>Bouchée de homard croustillant</h3>
                             <h4>Et sa farandole de petits légumes</h4> 
@@ -72,7 +72,7 @@
                         </div>
                     </article>
                 
-                    <article class="card-restau">    
+                    <article class="card-restau" style="--anim-order: 4;">    
                         <div class="card-content">
                             <h3>Velouté de cèpes</h3>
                             <h4>Aux truffes</h4>
@@ -87,8 +87,8 @@
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Plats</h2>
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 5;">Plats</h2>
+                    <article class="card-restau" style="--anim-order: 6;">
                         <div class="card-content">
                             <h3>Poulet rôti aux herbes de Provence</h3>
                             <h4>Et sa crème de truffe</h4>
@@ -102,7 +102,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 7;">
                         <div class="card-content">
                             <h3>Langouste rôtie</h3>
                             <h4>Et ses légumes de saison</h4>
@@ -115,7 +115,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 8;">
                         <div class="card-content">
                             <h3>Côte de bœuf Angus</h3>
                             <h4>Et sa purée de panais</h4>
@@ -131,8 +131,8 @@
                 </section>
 
                 <section class="cards-restau">
-                    <h2>Desserts</h2>  
-                    <article class="card-restau">
+                    <h2 style="--anim-order: 9;">Desserts</h2>  
+                    <article class="card-restau" style="--anim-order: 10;">
                         <div class="card-content">
                             <h3>Farandole de desserts</h3>
                             <h4>Du chef</h4> 
@@ -147,7 +147,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 11;">
                         <div class="card-content">
                             <h3>Crème brulée</h3>
                             <h4>Revisité</h4>
@@ -162,7 +162,7 @@
                         </div>
                     </article>
 
-                    <article class="card-restau">
+                    <article class="card-restau" style="--anim-order: 12;">
                         <div class="card-content">
                             <h3>Tiramisu</h3>
                             <h4>À la noisette</h4>
