delete scroll loader + add check animation for dish + add _heart.scss

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="./css/index.css">
     </head>
 
-    <body>
+    <body class="scroll">
 
         <div class="loader">
             <p class="loader__title">ohmyfood</p>
