--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
     <head>
         <meta charset="UTF-8">
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <header>
+        <header class="header-homepage">
             <div id="logo">
                 <img src="./assets/logo/ohmyfood.png" alt="Logo Ohmyfood">
             </div>
