--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <article class="card">
                                 <div class="card__image">
                                     <img src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                                    <button class="new">Nouveau</button>
+                                    <span class="new">Nouveau</span>
                                 </div>
                                 <div class="card__content">
                                     <div class="content-container">
@@ -105,7 +105,7 @@
                             <article class="card">
                                 <div class="card__image">
                                     <img src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                                    <button class="new">Nouveau</button>
+                                    <span class="new">Nouveau</span>
                                 </div>
         
                                 <div class="card__content">
